@@ -244,7 +244,7 @@ public class EventsFacadeIT extends IsaacIntegrationTest {
         Response teacher_Response = eventsFacade.getEventBookingForGivenGroup(teacher_Request, "_regular_test_event", "1");
         assertEquals(Response.Status.OK.getStatusCode(), teacher_Response.getStatus());
         List<?> teacherEntity = (List<?>) teacher_Response.getEntity();
-        List<Long> bookedUserIds = teacherEntity.stream().map(booking -> ((EventBookingDTO)booking).getUserBooked().getId()).collect(Collectors.toList());
+        List<Long> bookedUserIds = teacherEntity.stream().map(booking -> ((EventBookingDTO)booking).getUserBooked().getId()).toList();
         assertTrue(bookedUserIds.containsAll(Arrays.asList(7L, 8L)));
         assertFalse(bookedUserIds.contains(9L)); // User 9 is booked but is not in Teacher's group.
 
